src/test/ui/rfc-2632-const-trait-impl/const-impl-requires-const-trait.stderr
error: const `impl`s must be for traits marked with `#[const_trait]`
  --> $DIR/const-impl-requires-const-trait.rs:6:1
   |
LL | impl const A for () {}
   | ^^^^^^^^^^^^^^^^^^^
   |
note: this trait must be annotated with `#[const_trait]`
  --> $DIR/const-impl-requires-const-trait.rs:3:1
   |
LL | pub trait A {}
   | ^^^^^^^^^^^

error: aborting due to previous error

